# Capstone_M4

./: .gitignore  README.md  \training_code\Train_YOLOv12_Construction.ipynb  pyproject.toml
src/purwa_yolo/: main.py
training_code/: Train_YOLOv12_Construction.ipynb
