[project]
name = "purwa-yolo"
version = "0.2.0"
description = "Construction Safety Detection System with AI-Powered Compliance Dashboard"
authors = [
    {name = "Anintyo Herdadi", email = "anintyo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["yolo", "object-detection", "safety", "construction", "ppe-detection", "compliance"]

dependencies = [
    # Core Dependencies
    "numpy>=2.1.0,<3.0.0",
    "streamlit>=1.40.0,<2.0.0",
    "supervision>=0.27.0,<0.28.0",
    "ultralytics>=8.4.0,<9.0.0",
    "pillow>=12.0.0,<13.0.0",

    # Data Processing & Analysis
    "pandas>=2.0.0,<3.0.0",

    # Additional Core Utils
    "python-dateutil>=2.8.0,<3.0.0",

    # OpenCV Headless (no GUI/libGL required - for Streamlit Cloud)
    "opencv-python-headless>=4.13.0.92,<5.0.0.0",
]

[project.optional-dependencies]
# Video Processing Support
video = [
    "opencv-python-headless>=4.13.0",
]

# Advanced Visualization
viz = [
    "matplotlib>=3.7.0,<4.0.0",
    "plotly>=5.17.0,<6.0.0",
    "seaborn>=0.12.0,<1.0.0",
]

# PDF Report Generation
pdf = [
    "fpdf2>=2.7.0,<3.0.0",
    "reportlab>=4.0.0,<5.0.0",
]

# Database Integration
database = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",  # PostgreSQL
    "pymongo>=4.5.0,<5.0.0",           # MongoDB
]

# Email Notifications
notifications = [
    "python-dotenv>=1.0.0,<2.0.0",
]

# Excel Export Support
excel = [
    "openpyxl>=3.1.0,<4.0.0",
    "xlsxwriter>=3.1.0,<4.0.0",
]

# All optional features
all = [
    "opencv-python-headless>=4.13.0,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "plotly>=5.17.0,<6.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "fpdf2>=2.7.0,<3.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pymongo>=4.5.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "xlsxwriter>=3.1.0,<4.0.0",
]

# Development Dependencies
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "isort>=5.12.0,<6.0.0",
    "pre-commit>=3.3.0,<4.0.0",
]

[project.scripts]
# CLI scripts untuk convenience
safety-dashboard = "purwa_yolo.main_enhanced:main"
safety-test = "purwa_yolo.test_utils:run_all_tests"

[project.urls]
Homepage = "https://github.com/yourusername/purwa-yolo"
Documentation = "https://github.com/yourusername/purwa-yolo#readme"
Repository = "https://github.com/yourusername/purwa-yolo"
Issues = "https://github.com/yourusername/purwa-yolo/issues"

[tool.poetry]
name = "purwa-yolo"
version = "0.2.0"
description = "Construction Safety Detection System with AI-Powered Compliance Dashboard"
authors = ["Herman Sugi Harto <herman.sugiharto@intellinum.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "purwa_yolo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Dependencies
numpy = "^2.1.0"
streamlit = "^1.40.0"
supervision = "^0.27.0"
ultralytics = "^8.4.0"
pillow = "^12.0.0"
pandas = "^2.0.0"
python-dateutil = "^2.8.0"

# OpenCV Headless - wajib untuk Streamlit Cloud (tidak butuh libGL)
opencv-python-headless = "^4.13.0"

# Optional Dependencies
matplotlib = {version = "^3.7.0", optional = true}
plotly = {version = "^5.17.0", optional = true}
seaborn = {version = "^0.12.0", optional = true}
fpdf2 = {version = "^2.7.0", optional = true}
reportlab = {version = "^4.0.0", optional = true}
sqlalchemy = {version = "^2.0.0", optional = true}
psycopg2-binary = {version = "^2.9.0", optional = true}
pymongo = {version = "^4.5.0", optional = true}
python-dotenv = {version = "^1.0.0", optional = true}
openpyxl = {version = "^3.1.0", optional = true}
xlsxwriter = {version = "^3.1.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"

[tool.poetry.extras]
video = ["opencv-python-headless"]
viz = ["matplotlib", "plotly", "seaborn"]
pdf = ["fpdf2", "reportlab"]
database = ["sqlalchemy", "psycopg2-binary", "pymongo"]
notifications = ["python-dotenv"]
excel = ["openpyxl", "xlsxwriter"]
all = [
    "opencv-python-headless",
    "matplotlib",
    "plotly",
    "seaborn",
    "fpdf2",
    "reportlab",
    "sqlalchemy",
    "psycopg2-binary",
    "pymongo",
    "python-dotenv",
    "openpyxl",
    "xlsxwriter",
]

[tool.poetry.scripts]
safety-dashboard = "purwa_yolo.main_enhanced:main"
safety-test = "purwa_yolo.test_utils:run_all_tests"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ==================== TOOL CONFIGURATIONS ====================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | models
  | reports
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["models/*", "reports/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "models/",
    "reports/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --verbose
    --cov=purwa_yolo
    --cov-report=html
    --cov-report=term-missing
"""

[tool.coverage.run]
source = ["src/purwa_yolo"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
